[package]
name = "lui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
glob = "0.3.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
ureq = { version = "3.1.0", default-features = false, features = ["gzip", "json"] }
