[package]
name = "lui"
version = "0.2.2"
authors = ["Gábor Nyéki <gn@gabornyeki.com>"]
description = """
Lui is an LLM UI for the command line, using the API of Open WebUI.
"""
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/gn0/lui"
repository = "https://github.com/gn0/lui"
keywords = ["tool", "utility", "llm"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
glob = "0.3.3"
http = "1.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
ureq = { version = "3.1.0", default-features = false, features = ["gzip", "json"] }
